--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines":{
+    "node": "~5.3.0",
+    "npm": ">=3.3 <4"
+  },
   "dependencies": {
     "async": "^1.5.2",
     "body-parser": "~1.13.2",
